<resources>
    <string name="app_name">NewsMac</string>
    <string name="search">Search News</string>
    <string name="mac">MacNews</string>
    <string name="top">Top News</string>
    <string name="get">Get all News</string>
    <string name="sources">Sources of News</string>
    <string name="all">All Searched</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="create">Create Account</string>
    <string name="already">Already Have An Account? Log in Here</string>
    <string name="sign">Sign up</string>
    <string name="confirm">Confirm Password</string>
    <string name="input">textPassword</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="login">Log in</string>
    <string name="dont">Dont have an account? Sign up Here</string>
    <string name="log">Login</string>
    <string name="logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Content</string>
    <string name="save">Saved article</string>
    <string name="publish">Read The Article</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
</resources>
