<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mac"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView"
        android:textSize="90sp"
        android:textColor="@color/colorTextIcons"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/topTextView"
        android:textColor="@color/colorTextIcons"
        android:padding="5dp"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:layout_below="@+id/topTextView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/getTextView"
        android:textColor="@color/colorTextIcons"
        android:padding="5dp"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sources"
        android:layout_below="@+id/getTextView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/sourceTextView"
        android:textColor="@color/colorTextIcons"
        android:padding="5dp"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/savedNewsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="104dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchNews"
        android:text="@string/search"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>